force-app/main/default/objects/CARE_Application__c/fields/HOUSING_DEP_PERMIT_EXP_VALID__c.field-meta.xml
<CustomField>
    <fullName>HOUSING_DEP_PERMIT_EXP_VALID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOUSING DEP PERMIT EXP VALID</label>
    <type>Checkbox</type>
</CustomField>