force-app/main/default/objects/CARE_Application__c/fields/INCOMPLETE_INCOME__c.field-meta.xml
<CustomField>
    <fullName>INCOMPLETE_INCOME__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INCOMPLETE INCOME</label>
    <type>Checkbox</type>
</CustomField>