force-app/main/default/objects/CARE_Application__c/fields/INSURANCE_SETTLEMENTS__c.field-meta.xml
<CustomField>
    <fullName>INSURANCE_SETTLEMENTS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INSURANCE SETTLEMENTS</label>
    <type>Checkbox</type>
</CustomField>