force-app/main/default/objects/CARE_Application__c/fields/INTEREST_DIVIDENDS__c.field-meta.xml
<CustomField>
    <fullName>INTEREST_DIVIDENDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INTEREST DIVIDENDS</label>
    <type>Checkbox</type>
</CustomField>