force-app/main/default/objects/CARE_Application__c/fields/IS_ADJUSTMENT__c.field-meta.xml
<CustomField>
    <fullName>IS_ADJUSTMENT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS ADJUSTMENT</label>
    <type>Checkbox</type>
</CustomField>