force-app/main/default/objects/CARE_Application__c/fields/IS_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>IS_CATEGORY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS CATEGORY</label>
    <type>Checkbox</type>
</CustomField>