force-app/main/default/objects/CARE_Application__c/fields/IS_CATHOLIC_CHURCH__c.field-meta.xml
<CustomField>
    <fullName>IS_CATHOLIC_CHURCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS CATHOLIC CHURCH</label>
    <type>Checkbox</type>
</CustomField>