force-app/main/default/objects/CARE_Application__c/fields/IS_DENIED__c.field-meta.xml
<CustomField>
    <fullName>IS_DENIED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS DENIED</label>
    <type>Checkbox</type>
</CustomField>