force-app/main/default/objects/CARE_Application__c/fields/IS_DUPLICATE__c.field-meta.xml
<CustomField>
    <fullName>IS_DUPLICATE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS DUPLICATE</label>
    <type>Checkbox</type>
</CustomField>