force-app/main/default/objects/CARE_Application__c/fields/IS_HIGH_USAGE__c.field-meta.xml
<CustomField>
    <fullName>IS_HIGH_USAGE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS HIGH USAGE</label>
    <type>Checkbox</type>
</CustomField>