force-app/main/default/objects/CARE_Application__c/fields/IS_MISSING_INFO__c.field-meta.xml
<CustomField>
    <fullName>IS_MISSING_INFO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS MISSING INFO</label>
    <type>Checkbox</type>
</CustomField>