force-app/main/default/objects/CARE_Application__c/fields/IS_NEW_ENROLLMENT__c.field-meta.xml
<CustomField>
    <fullName>IS_NEW_ENROLLMENT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS NEW ENROLLMENT</label>
    <type>Checkbox</type>
</CustomField>