force-app/main/default/objects/CARE_Application__c/fields/IS_RECERT__c.field-meta.xml
<CustomField>
    <fullName>IS_RECERT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS RECERT</label>
    <type>Checkbox</type>
</CustomField>