force-app/main/default/objects/CARE_Application__c/fields/IS_SIGNATURE_REQ__c.field-meta.xml
<CustomField>
    <fullName>IS_SIGNATURE_REQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS SIGNATURE REQ</label>
    <type>Checkbox</type>
</CustomField>