force-app/main/default/objects/CARE_Application__c/fields/IS_SIGNED__c.field-meta.xml
<CustomField>
    <fullName>IS_SIGNED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS SIGNED</label>
    <type>Checkbox</type>
</CustomField>