force-app/main/default/objects/CARE_Application__c/fields/IS_SOCIAL_SERVICE_LICENSE__c.field-meta.xml
<CustomField>
    <fullName>IS_SOCIAL_SERVICE_LICENSE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS SOCIAL SERVICE LICENSE</label>
    <type>Checkbox</type>
</CustomField>