force-app/main/default/objects/CARE_Application__c/fields/LETTER_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>LETTER_SENT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LETTER SENT DATE</label>
    <type>Date</type>
</CustomField>