force-app/main/default/objects/CARE_Application__c/fields/LETTERHEAD__c.field-meta.xml
<CustomField>
    <fullName>LETTERHEAD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LETTERHEAD</label>
    <type>Checkbox</type>
</CustomField>