force-app/main/default/objects/CARE_Application__c/fields/LIHEAP__c.field-meta.xml
<CustomField>
    <fullName>LIHEAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LIHEAP</label>
    <type>Checkbox</type>
</CustomField>