force-app/main/default/objects/CARE_Application__c/fields/MAILOUT_DATE__c.field-meta.xml
<CustomField>
    <fullName>MAILOUT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MAILOUT DATE</label>
    <type>Date</type>
</CustomField>