force-app/main/default/objects/CARE_Application__c/fields/MEDICAID_OVER65__c.field-meta.xml
<CustomField>
    <fullName>MEDICAID_OVER65__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MEDICAID OVER65</label>
    <type>Checkbox</type>
</CustomField>