force-app/main/default/objects/CARE_Application__c/fields/MEDICAID_UNDER65__c.field-meta.xml
<CustomField>
    <fullName>MEDICAID_UNDER65__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MEDICAID UNDER65</label>
    <type>Checkbox</type>
</CustomField>