force-app/main/default/objects/CARE_Application__c/fields/MIGRANT_CONTRACT__c.field-meta.xml
<CustomField>
    <fullName>MIGRANT_CONTRACT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MIGRANT CONTRACT</label>
    <type>Checkbox</type>
</CustomField>