force-app/main/default/objects/CARE_Application__c/fields/MIGRANT_CONTRACT_NAME_MATCH__c.field-meta.xml
<CustomField>
    <fullName>MIGRANT_CONTRACT_NAME_MATCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MIGRANT_CONTRACT_NAME_MATCH</label>
    <type>Checkbox</type>
</CustomField>