force-app/main/default/objects/CARE_Application__c/fields/NEED_NAME_CHANGE__c.field-meta.xml
<CustomField>
    <fullName>NEED_NAME_CHANGE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NEED NAME CHANGE</label>
    <type>Checkbox</type>
</CustomField>