force-app/main/default/objects/CARE_Application__c/fields/NO_ATTACHMENTS__c.field-meta.xml
<CustomField>
    <fullName>NO_ATTACHMENTS__c</fullName>
    <label>NO ATTACHMENTS</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>