force-app/main/default/objects/CARE_Application__c/fields/NO_ATTACHMENTS_RECEIVED__c.field-meta.xml
<CustomField>
    <fullName>NO_ATTACHMENTS_RECEIVED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NO ATTACHMENTS RECEIVED</label>
    <type>Checkbox</type>
</CustomField>