force-app/main/default/objects/CARE_Application__c/fields/NO_PAGE__c.field-meta.xml
<CustomField>
    <fullName>NO_PAGE__c</fullName>
    <label>NO PAGE</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>