force-app/main/default/objects/CARE_Application__c/fields/NO_WITH_INCOME__c.field-meta.xml
<CustomField>
    <fullName>NO_WITH_INCOME__c</fullName>
    <label>NO WITH INCOME</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>