force-app/main/default/objects/CARE_Application__c/fields/NSLP__c.field-meta.xml
<CustomField>
    <fullName>NSLP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NSLP</label>
    <type>Checkbox</type>
</CustomField>