force-app/main/default/objects/CARE_Application__c/fields/On_Probation__c.field-meta.xml
<CustomField>
    <fullName>On_Probation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Probation</label>
    <type>Checkbox</type>
</CustomField>