force-app/main/default/objects/CARE_Application__c/fields/Owner_LAN_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_LAN_ID__c</fullName>
    <formula>Owner:User.LAN_ID_EI__c</formula>
    <label>Owner LAN ID</label>
    <type>Text</type>
</CustomField>