force-app/main/default/objects/CARE_Application__c/fields/Parent_Application__c.field-meta.xml
<CustomField>
    <fullName>Parent_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Application</label>
    <referenceTo>CARE_Application__c</referenceTo>
    <relationshipLabel>CARE Application</relationshipLabel>
    <relationshipName>Child_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>