force-app/main/default/objects/CARE_Application__c/fields/PARTICIPANT__c.field-meta.xml
<CustomField>
    <fullName>PARTICIPANT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARTICIPANT</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CARE Application (PARTICIPANT)</relationshipLabel>
    <relationshipName>CARE_Application1</relationshipName>
    <type>Lookup</type>
</CustomField>