force-app/main/default/objects/CARE_Application__c/fields/PENSIONS__c.field-meta.xml
<CustomField>
    <fullName>PENSIONS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PENSIONS</label>
    <type>Checkbox</type>
</CustomField>