force-app/main/default/objects/CARE_Application__c/fields/PEV_FORM__c.field-meta.xml
<CustomField>
    <fullName>PEV_FORM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Received</label>
    <type>Checkbox</type>
</CustomField>