force-app/main/default/objects/CARE_Application__c/fields/PROCESS_NOTES__c.field-meta.xml
<CustomField>
    <fullName>PROCESS_NOTES__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PROCESS NOTES</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>