force-app/main/default/objects/CARE_Application__c/fields/PROCESSED_DATE__c.field-meta.xml
<CustomField>
    <fullName>PROCESSED_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PROCESSED DATE</label>
    <type>Date</type>
</CustomField>