force-app/main/default/objects/CARE_Application__c/fields/PROGRAM__c.field-meta.xml
<CustomField>
    <fullName>PROGRAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PROGRAM</label>
    <referenceTo>CARE_PROGRAM__c</referenceTo>
    <relationshipLabel>CARE Application</relationshipLabel>
    <relationshipName>CARE_Application</relationshipName>
    <type>Lookup</type>
</CustomField>