force-app/main/default/objects/CARE_Application__c/fields/QUALIFIED_BY__c.field-meta.xml
<CustomField>
    <fullName>QUALIFIED_BY__c</fullName>
    <label>QUALIFIED BY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Categorical</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>