force-app/main/default/objects/CARE_Application__c/fields/REASON_DESC__c.field-meta.xml
<CustomField>
    <fullName>REASON_DESC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>REASON DESC</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>