force-app/main/default/objects/CARE_Application__c/fields/RECEIVED_DATE__c.field-meta.xml
<CustomField>
    <fullName>RECEIVED_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RECEIVED DATE</label>
    <type>Date</type>
</CustomField>