force-app/main/default/objects/CARE_Application__c/fields/RENTAL_ROYALTY_INCOME__c.field-meta.xml
<CustomField>
    <fullName>RENTAL_ROYALTY_INCOME__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RENTAL ROYALTY INCOME</label>
    <type>Checkbox</type>
</CustomField>