force-app/main/default/objects/CARE_Application__c/fields/REQUEST_DROP__c.field-meta.xml
<CustomField>
    <fullName>REQUEST_DROP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>REQUEST DROP</label>
    <type>Checkbox</type>
</CustomField>