force-app/main/default/objects/CARE_Application__c/fields/RESULT_DATE__c.field-meta.xml
<CustomField>
    <fullName>RESULT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RESULT DATE</label>
    <type>Date</type>
</CustomField>