force-app/main/default/objects/CARE_Application__c/fields/RETRO_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>RETRO_END_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RETRO END DATE</label>
    <type>Date</type>
</CustomField>