force-app/main/default/objects/CARE_Application__c/fields/RETRO_PROCESS_DATE__c.field-meta.xml
<CustomField>
    <fullName>RETRO_PROCESS_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RETRO PROCESS DATE</label>
    <type>Date</type>
</CustomField>