force-app/main/default/objects/CARE_Application__c/fields/SCHOLARSHIPS_GRANTS__c.field-meta.xml
<CustomField>
    <fullName>SCHOLARSHIPS_GRANTS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCHOLARSHIPS GRANTS</label>
    <type>Checkbox</type>
</CustomField>