force-app/main/default/objects/CARE_Application__c/fields/SOCIAL_SECURITY__c.field-meta.xml
<CustomField>
    <fullName>SOCIAL_SECURITY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOCIAL SECURITY</label>
    <type>Checkbox</type>
</CustomField>