force-app/main/default/objects/CARE_Application__c/fields/SOURCE_CHANNEL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_CHANNEL_TYPE__c</fullName>
    <label>SOURCE CHANNEL TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Demand Status</fullName>
            </value>
            <value>
                <fullName>CARE Force.com</fullName>
            </value>
            <value>
                <fullName>CARE SMS</fullName>
            </value>
            <value>
                <fullName>CARE Flatsite</fullName>
            </value>
            <value>
                <fullName>CARE MyEnergy</fullName>
            </value>
            <value>
                <fullName>Regular App</fullName>
            </value>
            <value>
                <fullName>SoundBite</fullName>
            </value>
            <value>
                <fullName>Phone Enrollment</fullName>
            </value>
            <value>
                <fullName>Web Download</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>CASE/Adjustment</fullName>
            </value>
            <value>
                <fullName>CASE/Reinstatement</fullName>
            </value>
            <value>
                <fullName>CASE/Transfer</fullName>
            </value>
            <value>
                <fullName>CASE/Commodity</fullName>
            </value>
            <value>
                <fullName>PEV/Adjustment</fullName>
            </value>
            <value>
                <fullName>Enroll/Adjustment</fullName>
            </value>
            <value>
                <fullName>Bill Insert</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Allconnect</fullName>
            </value>
            <value>
                <fullName>ESA Enrollment</fullName>
            </value>
            <value>
                <fullName>DAC GT Enrollment</fullName>
            </value>
            <value>
                <fullName>Water Agency/IOU</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>DataXport Enrollment</fullName>
            </value>
            <value>
                <fullName>DataXport PEV Notice</fullName>
            </value>
            <value>
                <fullName>CARE New_Mover</fullName>
            </value>
            <value>
                <fullName>CARE IVR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>