force-app/main/default/objects/CARE_Application__c/fields/SPOUSAL_CHILD_SUPPORT__c.field-meta.xml
<CustomField>
    <fullName>SPOUSAL_CHILD_SUPPORT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPOUSAL CHILD SUPPORT</label>
    <type>Checkbox</type>
</CustomField>