force-app/main/default/objects/CARE_Application__c/fields/SSP_SSDI__c.field-meta.xml
<CustomField>
    <fullName>SSP_SSDI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSP SSDI</label>
    <type>Checkbox</type>
</CustomField>