force-app/main/default/objects/CARE_Application__c/fields/TAX_EXEMPT_FORM__c.field-meta.xml
<CustomField>
    <fullName>TAX_EXEMPT_FORM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TAX EXEMPT FORM</label>
    <type>Checkbox</type>
</CustomField>