force-app/main/default/objects/CARE_Application__c/fields/TAX_EXEMPT_FORM_NAME_MATCH__c.field-meta.xml
<CustomField>
    <fullName>TAX_EXEMPT_FORM_NAME_MATCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TAX EXEMPT FORM NAME MATCH</label>
    <type>Checkbox</type>
</CustomField>