force-app/main/default/objects/CARE_Application__c/fields/TENANT__c.field-meta.xml
<CustomField>
    <fullName>TENANT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TENANT</label>
    <referenceTo>CARE_Tenant__c</referenceTo>
    <relationshipLabel>CARE Application (TENANT)</relationshipLabel>
    <relationshipName>CARE_Application1</relationshipName>
    <type>Lookup</type>
</CustomField>