force-app/main/default/objects/CARE_Application__c/fields/TOTAL_ELEC_UNITS__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_ELEC_UNITS__c</fullName>
    <description>This is updated for main application only, whenever a change happened. This doesn&apos;t gets updated with the latest count of Facility object.</description>
    <label>TOTAL ELEC UNITS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>