force-app/main/default/objects/CARE_Application__c/fields/Total_Persons_in_Household__c.field-meta.xml
<CustomField>
    <fullName>Total_Persons_in_Household__c</fullName>
    <label>Total Persons in Household</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>