force-app/main/default/objects/CARE_Application__c/fields/TRANS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TRANS_TYPE__c</fullName>
    <label>TRANS TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Recert</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Drop all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>