force-app/main/default/objects/CARE_Application__c/fields/UNEMPLOYMENT_BENEFITS__c.field-meta.xml
<CustomField>
    <fullName>UNEMPLOYMENT_BENEFITS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UNEMPLOYMENT BENEFITS</label>
    <type>Checkbox</type>
</CustomField>