force-app/main/default/objects/CARE_Application__c/fields/UPDATE_DATE_CARE1__c.field-meta.xml
<CustomField>
    <fullName>UPDATE_DATE_CARE1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UPDATE DATE CARE1</label>
    <type>Date</type>
</CustomField>