force-app/main/default/objects/CARE_Application__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>