force-app/main/default/objects/CARE_Application__c/fields/V_CC_DTTM__c.field-meta.xml
<CustomField>
    <fullName>V_CC_DTTM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>V CC DTTM</label>
    <type>Date</type>
</CustomField>