force-app/main/default/objects/CARE_Application__c/fields/V_CC_TYPE_CD__c.field-meta.xml
<CustomField>
    <fullName>V_CC_TYPE_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>V CC TYPE CD</label>
    <length>12</length>
    <type>Text</type>
</CustomField>