force-app/main/default/objects/CARE_Application__c/fields/V_DETAIL_NO__c.field-meta.xml
<CustomField>
    <fullName>V_DETAIL_NO__c</fullName>
    <label>V DETAIL NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>