force-app/main/default/objects/CARE_Application__c/fields/WAGES_PROFITS__c.field-meta.xml
<CustomField>
    <fullName>WAGES_PROFITS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WAGES PROFITS</label>
    <type>Checkbox</type>
</CustomField>