force-app/main/default/objects/CARE_Application__c/fields/WIC__c.field-meta.xml
<CustomField>
    <fullName>WIC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WIC</label>
    <type>Checkbox</type>
</CustomField>