force-app/main/default/objects/CARE_Application__c/fields/WORK_PHONE_NO__c.field-meta.xml
<CustomField>
    <fullName>WORK_PHONE_NO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WORK PHONE NO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>