force-app/main/default/objects/CARE_Application__c/fields/WORKERS_COMP__c.field-meta.xml
<CustomField>
    <fullName>WORKERS_COMP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WORKERS COMP</label>
    <type>Checkbox</type>
</CustomField>