force-app/main/default/objects/CARE_Application__c/recordTypes/Agricultural.recordType-meta.xml
<RecordType>
    <fullName>Agricultural</fullName>
    <active>true</active>
    <label>Agricultural</label>
</RecordType>