force-app/main/default/objects/CARE_Application__c/recordTypes/MF.recordType-meta.xml
<RecordType>
    <fullName>MF</fullName>
    <active>true</active>
    <label>MF</label>
</RecordType>