force-app/main/default/objects/CARE_Application__c/recordTypes/Migrant.recordType-meta.xml
<RecordType>
    <fullName>Migrant</fullName>
    <active>true</active>
    <label>Migrant</label>
</RecordType>