force-app/main/default/objects/CARE_Application__c/recordTypes/Non_Profile.recordType-meta.xml
<RecordType>
    <fullName>Non_Profile</fullName>
    <active>true</active>
    <label>Non-Profile</label>
</RecordType>