force-app/main/default/objects/CARE_Application__c/recordTypes/Non_Profit.recordType-meta.xml
<RecordType>
    <fullName>Non_Profit</fullName>
    <active>true</active>
    <label>Non-Profit</label>
</RecordType>