force-app/main/default/objects/CARE_Application__c/recordTypes/NP.recordType-meta.xml
<RecordType>
    <fullName>NP</fullName>
    <active>true</active>
    <label>NP</label>
</RecordType>