force-app/main/default/objects/CARE_Application__c/recordTypes/Residential_Customer.recordType-meta.xml
<RecordType>
    <fullName>Residential_Customer</fullName>
    <active>true</active>
    <description>Record Type for Residential Customer.</description>
    <label>Residential Customer</label>
</RecordType>