force-app/main/default/objects/CARE_Application__c/recordTypes/Sub_Metered.recordType-meta.xml
<RecordType>
    <fullName>Sub_Metered</fullName>
    <active>true</active>
    <label>Sub-Metered</label>
</RecordType>