force-app/main/default/objects/CARE_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>PER_ID__c</columns>
    <columns>NAME</columns>
    <columns>APPLICATION_TYPE__c</columns>
    <columns>ACCT_ID__c</columns>
    <columns>APPLICANT_NAME__c</columns>
    <columns>APPLICATION_STATUS__c</columns>
    <columns>ENROLLMENT_TYPE__c</columns>
    <columns>CC_ID__c</columns>
    <columns>CCB_CONTACT_CODE__c</columns>
    <columns>CARE_City__c</columns>
    <columns>CARE_Customer_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CC_CL_CD__c</columns>
    <columns>PARTICIPANT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APPLICATION_STATUS__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>