force-app/main/default/objects/CARE_Application__c/listViews/CARE_PEV_Queue_CARE_Application.listView-meta.xml
<ListView>
    <fullName>CARE_PEV_Queue_CARE_Application</fullName>
    <columns>NAME</columns>
    <columns>ACCT_ID__c</columns>
    <columns>APPLICANT_NAME__c</columns>
    <columns>APPLICATION_STATUS__c</columns>
    <filterScope>Queue</filterScope>
    <label>CARE_PEV_Queue</label>
    <queue>CARE_PEV_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>