force-app/main/default/objects/CARE_Application__c/listViews/My_In_Progress_Applications.listView-meta.xml
<ListView>
    <fullName>My_In_Progress_Applications</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My In-Progress Applications</label>
</ListView>