force-app/main/default/objects/CARE_Application__c/listViews/Pending_Assignment_PEV.listView-meta.xml
<ListView>
    <fullName>Pending_Assignment_PEV</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>APPLICATION_STATUS__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending PEV Assignment - Sample</label>
</ListView>